# AI_generated_text_detection

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
.dvc/: config
ai_generated_text_detection/: logger.py  test.py  train.py
ai_generated_text_detection/configs/: config.yaml
ai_generated_text_detection/configs/data/: data.yaml
ai_generated_text_detection/configs/logging/: mlflow.yaml
ai_generated_text_detection/configs/model/: lstm_classifier.yaml  transformer_classifier.yaml
ai_generated_text_detection/configs/training_params/: training_params.yaml
ai_generated_text_detection/data/: __init__.py  load_data.py  loaders.py  processing.py
ai_generated_text_detection/models/: __init__.py  load_models.py  lstm_classifier.py  model_module.py  transformer_classifier.py
