[project]
name = "hse-mlops-project"
version = "0.0.1"
description = "AI generated text detection. HSE MLOps project"
authors = [
    {name = "vakhibin@hse.edu.ru", email = "vakhibin@hse.edu.ru"}
]
readme = "README.md"
requires-python = "==3.11.13"

dependencies = [
    "torch>=2.9.1",
    "pandas>=2.3.3",
    "numpy>=2.4.0",
    "nltk>=3.9.2",
    "pytorch-lightning>=2.6.0",
    "torchmetrics>=1.8.2",
    "scikit-learn>=1.8.0",
    "pre-commit>=4.5.1",
    "kagglehub>=0.3.13",
    "fire>=0.7.1",
    "hydra-core>=1.3.2",
    "lightning>=2.6.0",
    "dvc>=3.65.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "mlflow>=3.8.0",
]